--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Confirmo</title>
-  <link rel="icon" type="image/png" href="Confirm_logo.png?v=1.0">
+  <link rel="icon" type="image/png" href="confirm_logo.png?v=2">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     .currency-icon img {
@@ -1009,3 +1009,4 @@
   </script>
 </body>
 </html>
+
